--- a/index.html
+++ b/index.html
@@ -1,8 +1,23 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <link rel="stylesheet" href="moduleTwo.css">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <body>
-        <h2>Hello Coursera!m-2</h2>
+        <h1>Our Menu</h1>
+        <div class="mainContainer">
+            <div class="table">
+                <div class="chicken">chicken</div>
+                <div class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse vestibulum et metus semper faucibus. Vestibulum elit arcu, ultricies quis nulla et, semper efficitur turpis. Phasellus eu ex diam. Mauris porttitor, dui in volutpat placerat, tortor ipsum sollicitudin mi, ac elementum lorem ex vel est.</div>
+            </div>
+            <div class="table">
+                <div class="chicken">beef</div>
+                <div class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse vestibulum et metus semper faucibus. Vestibulum elit arcu, ultricies quis nulla et, semper efficitur turpis. Phasellus eu ex diam. Mauris porttitor, dui in volutpat placerat, tortor ipsum sollicitudin mi, ac elementum lorem ex vel est.</div>
+            </div>
+            <div class="table table3">
+                <div class="chicken chicken3">sushi</div>
+                <div class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse vestibulum et metus semper faucibus. Vestibulum elit arcu, ultricies quis nulla et, semper efficitur turpis. Phasellus eu ex diam. Mauris porttitor, dui in volutpat placerat, tortor ipsum sollicitudin mi, ac elementum lorem ex vel est.</div>
+            </div>
+        </div>
     </body>
-    </head>
 </html>
